# asr_eval

./: .pre-commit-config.yaml  README.md  pyproject.toml
.github/workflows/: test.yml
data/output/2024/: mean_scores_dialect.csv  mean_scores_gender.csv  mean_scores_year.csv
notebooks/: app_2023_2024_mean_scores.ipynb  app_nno_nob_mean_scores.ipynb  compare_dialects.ipynb  compare_genders.ipynb  compare_mean_scores_last_year.ipynb  compare_years.ipynb  mean_scores_barchart.ipynb  notebook_utils.py  overlappende_tale.ipynb  overlapping_speech.ipynb
scripts/: add_columns_to_old_prediction_files.py
src/asr_eval/: __init__.py  __main__.py  aligned_semdist.py  metrics.py  semantic_distance.py  utils.py
src/asr_eval/predict/: __init__.py  __main__.py  azure.py  chirp.py  gcloud_speech.py  usm.py
tests/asr_eval/metrics/: conftest.py  test_aligned_semdist.py  test_cer.py  test_sbert_semdist.py  test_semdist.py  test_wer.py
tests/asr_eval/utils/: test_add_error_count.py
