[project]
name = "asr_eval"
version = "0.1.0"
description = "Code to do yearly evaluation of Norwegian speech recognition models"
authors = [
    {name = "Språkbanken", email = "sprakbanken@nb.no"},
    {name = "Tita Enstad", email = "tita.enstad@nb.no"},
    {name = "Marie Iversdatter Røsok", email = "marie.rosok@nb.no"},
    {name = "Ingerid Løyning Dale", email = "ingerid.dale@nb.no"},
]
requires-python = "==3.11.*"
readme = "README.md"
license = {text = "CC-0"}
dependencies = [
    "aligned-semantic-distance @ git+https://github.com/Sprakbanken/aligned-semantic-distance.git",
    "ipykernel>=6.29.5",
    "jiwer>=3.0.5",
    "pandas>=2.2.3",
    "pytest>=8.3.4",
    "ruff>=0.9.2",
    "sentence-transformers>=3.4.0",
    "torch>=2.5.1",
    "transformers>=4.48.1",
    "pre-commit>=4.1.0",
    "google-api-core>=2.24.1",
    "google-cloud-speech>=2.30.0",
    "azure-cognitiveservices-speech>=1.42.0",
    "python-dotenv>=1.0.1",
    "pydub>=0.25.1",
    "dash>=2.18.2",
]


[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"


[tool.pdm]
distribution = true
